--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Aziz Amari",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
