--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "moment": "^2.29.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.4",
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
