--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "connect-pg-simple": "^6.2.1",
+    "connect-session-sequelize": "^7.1.1",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "moment": "^2.29.1",
