--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "connect-pg-simple": "^6.2.1",
     "connect-session-sequelize": "^7.1.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "moment": "^2.29.1",
