--- a/api/package.json
+++ b/api/package.json
@@ -4,25 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Aziz Amari",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "connect-pg-simple": "^6.2.1",
-    "connect-session-sequelize": "^7.1.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "moment": "^2.29.1",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "pg": "^8.6.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.4",
-    "socket.io": "^4.1.2"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.12"
   }
 }
