--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "moment": "^2.29.1",
         "socket.io": "^4.1.3"
     },
     "devDependencies": {
