--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,9 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "moment": "^2.29.1",
+        "pg": "^8.6.0",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.6.5",
         "socket.io": "^4.1.3"
     },
     "devDependencies": {
